# firmware-stm3210fx2

./: .gitignore  Makefile.am  Makefile.in  README  README.md  config.h  config.status  configure  configure.ac  show_sources.sh
autom4te.cache/: output.0  requests  traces.1
doc/: Doxyfile
src/: Makefile.am  Makefile.in
src/Source/: main.c  stm32f10x_conf.h
src/common/: openocd.cfg
